--- a/FishersYMCA.Swimming.WebAPI/FishersYMCA.Swimming.WebAPI.csproj
+++ b/FishersYMCA.Swimming.WebAPI/FishersYMCA.Swimming.WebAPI.csproj
@@ -296,8 +296,11 @@
     <Content Include="resources\videos\IMG_0741-1.mp4" />
     <Content Include="resources\YMCAlogo.jpeg" />
     <Content Include="resources\YMCAlogo.png" />
-    <Content Include="Scripts\app\scheduler.js" />
+    <Content Include="Scripts\app\lane-detail.js" />
+    <Content Include="Scripts\app\scheduler-orig.js" />
+    <Content Include="Scripts\app\pool-schedule.js" />
     <Content Include="Scripts\app\swim-gen.js" />
+    <Content Include="Scripts\app\time-slot.js" />
     <Content Include="Scripts\bootstrap\bootstrap.js" />
     <Content Include="Scripts\bootstrap\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.11.0.js" />
@@ -316,7 +319,6 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\require.js" />
-    <Content Include="Scripts\scheduler.js" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml">
