Modifled the bundles config and removed require JS. Started looking at how I could use templating with Knockout

--- a/FishersYMCA.Swimming.WebAPI/FishersYMCA.Swimming.WebAPI.csproj
+++ b/FishersYMCA.Swimming.WebAPI/FishersYMCA.Swimming.WebAPI.csproj
@@ -302,7 +302,7 @@
     <Content Include="Scripts\app\scheduler-orig.js" />
     <Content Include="Scripts\app\pool.js" />
     <Content Include="Scripts\app\swim-gen.js" />
-    <Content Include="Scripts\app\time-schedule.js" />
+    <Content Include="Scripts\app\schedule.js" />
     <Content Include="Scripts\bootstrap\bootstrap.js" />
     <Content Include="Scripts\bootstrap\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.11.0.js" />
